deployment/deploy.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: car-api
spec:
  selector:
    matchLabels:
      app: car-parking-spots
      role: backend
  replicas: 1
  template:
    metadata:
      name: car-api-deployment
      labels:
        app: car-parking-spots
        role: backend
        env: develop
    spec:
      containers:
      - name: car-api
        image: gcr.io/gcr-project/sample:1.0.0
        resources:
          limits:
            memory: "500Mi"
            cpu: "100m"
        imagePullPolicy: Always
#        readinessProbe:
#          httpGet:
#            path: /
#            port: 8000
        ports:
        - name: car-api-port
          containerPort: 80
