deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-api-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: car-parking-spots
    role: backend
