deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: car-api-ingress
spec:
  backend:
    serviceName: car-api-service
    servicePort: 3000
  rules:
  - host: car-api.car.et6da.gebeya.co
    http:
      paths:
      - backend:
          serviceName: car-api-service
          servicePort: 3000
        path: /
